SubVersion: $Id$

- 01/06/2005, version 2.00-rc3:
	- [roms] $1462: fixed bug #1212619.
	- [roms] $1467: fixed ON key
	
- 31/05/2005, version 2.00-rc2:
	- [kevin] $1357/1362: added support for disassembling ER_throw
	- [kevin] $1364/1365: link tiemu.rc in for MinGW
	- [roms]  $1382: fixed HOME & CATALOG keys on Titanium (mouse only)
	- [jb]    $1399: added EPS/PDF screenshot output
	- [roms]  $1408: fixed check of Titanium skins (bug #1209813)
	- [roms]  $1415: fixed debugger display under SawFish (patch #1209183)
	- [kevin] $1417/1418: fixed 0x600017 and implemented detection of Patrick
                          Davidson's grayscale routine (bug #1207299)
	- [kevin] $1420/1421: when minimizing the main window, don't hide the others
                          (patch #1209183)
	- [kevin] $1424/1425: fixed checkboxes in the program entry breakpoint
	                      dialog (a subtle 2-byte buffer overflow!)
	- [kevin] $1427/1428: RTC port triggers every 8192 seconds (correct), not every 4 (dbg code)
	- [kevin] $1430/1431: fixed resetting with the debugger open (closes the debugger
	                      rather than starting the engine with the debugger still expecting
	                      it to be stopped)
	- [kevin] $1432/1433: reenabled memory window refresh
	- [roms]  $1434: fixed multiple check items in the popup menu (button group)
	- [roms]  $1436: HW protection is enabled by default for now
	- [roms]  $1440: tiemu.ini file loader/saver: slightly re-arranged sections and cleaned-up.
	- [roms]  $1443: view mode is now saved in the config file.
	- [roms]  $1444: view mode is restored at startup.
	- [roms]  $1446: screenshot of TI89 is now clipped
	- [roms]  $1447: B&W screenshot support added
	- [roms]  $1448: fixed screenshot of full skin with LCD
	- [roms]  $1449: timeout of direct file loading can be changed now

- 16/05/2005, version 2.00-rc1 (3.9.1, 0.6.4, 4.5.9):
	- [kevin] $1337/1338: fix --with-kde for Debian and derivatives